# wavi

./: .gitignore  Makefile  README.md  debug_audio.py  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: test.yml
docs/: audit-checklist.md  boarding.html  capability-matrix.md  plan-mejoras.md
docs/adr/: ADR-001-vision-over-dom.md  ADR-002-viewport-1280x1920.md  ADR-003-chrome-daemon.md  ADR-004-dom-anchor-dedup.md  ADR-005-arm64-chrome.md  ADR-006-optimistic-headless-connect.md  ADR-007-transcribe-after-close.md  ADR-008-port-registry.md
docs/reports/: test_results.js
scripts/: debug_audio.py  make_corpus_case.py
swift/: ocr_vision.swift
tests/: conftest.py  corpus_utils.py  test_corpus.py  test_lazy_session.py  test_runner.py  test_session.py  test_transcription.py  test_vision.py
tests/corpus/: README.md
wavi/: __init__.py  cli.py  element_detector.py  queue.py  runner.py  session.py  transcription.py  vision.py
