[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wavi"
version = "0.1.0"
description = "WhatsApp automation via vision: screenshot → OCR → click"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "pillow>=10.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "click>=8.1",
    "groq>=0.11",
    "python-dotenv>=1.2.2",
]

[project.scripts]
wavi = "wavi.cli:main"

# Keep in sync with [dependency-groups].dev — pip uses this extra
# (make install-dev), uv sync uses the dependency group.
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["wavi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "corpus: golden-screenshot vision eval (slow, real OCR, gated by WAVI_CORPUS=1)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line length — long JS constants and comments are fine
]
